test/files/neg/t3663.check
main.scala:11: error: variable foo cannot be accessed in test.Test
      println(t.foo)
                ^
one error found
